Singleton and co-powered factory rebuild.

--- a/package.json
+++ b/package.json
@@ -1,17 +1,27 @@
 {
 	"name": "co-gen-factory",
-	"version": "1.0.0",
-	"description": "A Co Factory pattern powered by an infinite Generator sequence", 
-	"keywords": ["co", "factory", "generator", "infinite", "factorymethod", "memoize", "memoization", "memoizee"],
+	"version": "1.0.1",
+	"description": "A Co Factory pattern powered by an infinite Generator sequence",
+	"keywords": [
+		"co",
+		"factory",
+		"generator",
+		"infinite",
+		"factorymethod",
+		"memoize",
+		"memoization",
+		"memoizee"
+	],
 	"main": "co-gen-factory.js",
 	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1"
+		"test": "node --harmony node_modules/.bin/tape test/*js"
 	},
 	"author": "rektide de la faye",
 	"license": "X",
 	"dependencies": {
 		"co": "^3.1.0",
-		"memoizee": "^0.3.7"
+		"memoizee": "^0.3.7",
+		"tape": "^3.0.0"
 	},
 	"repository": {
 		"type": "git",
